# aerdg

./: CMakeLists.txt  LICENSE  README.md
CREP/: CMakeLists.txt  CREP.cpp  CREP.h  assign_initial.h  brp_alg.h  brp_crep.h  brp_crep_age.h  brp_heu.h  brp_hops.h  charikar.h  cluster_state.cpp  cluster_state.h  comp_graph.cpp  comp_graph.h  comp_mig_age.h  comp_mig_alg.h  comp_mig_cc.h  comp_mig_cc_age.h  comp_mig_dummy.h  comp_mig_full.h  comp_mig_greedy.h  comp_mig_greedy_age.h  comp_mig_hop.h  comp_mig_hop_age.h  create_offline_copy.cpp  create_offline_copy.h  data_generated.h  data_json.h  data_mongo_offline.h  data_mongodb.h  data_source.h  debug.h  dynamic_partitioning.h  explore_neighborhood.h  general_purpose_main.cpp  general_purpose_main.h  graph.cpp  graph.h  graph_extended.h  include_boost.h  (+16 more)
config/: eval_A.txt  eval_B.txt  eval_C.txt  eval_D.txt  eval_E.txt  eval_F.txt  eval_FB_A.txt  eval_FB_C.txt  eval_G.txt  eval_GREEDY_A.txt  eval_GREEDY_B.txt  eval_GREEDY_C.txt  eval_GREEDY_D.txt  eval_H.txt  eval_HOP_hpc.txt  eval_HOP_p_fab.txt  eval_I.txt  eval_J.txt  eval_K.txt  eval_L.txt  eval_master.txt  eval_static_A.txt  eval_static_B.txt  eval_static_E.txt  eval_static_FB.txt  eval_static_HJL.txt  eval_static_L.txt
eval/plots/data/: alpha.csv  facebook.csv  gamma.csv  greedy.csv  hops.csv  lambda.csv  overview.csv  part_size.csv
eval/plots/experimental_scripts/: crep_functions.R  crep_main_plot.R  events_analysis.r  network_vis.R  network_vis_spells.R  plot_comparison_of_different_brp_algs.r  plot_num_migs_boxplot.r  plot_time_get_mig_vtxs.r  plot_time_migrate_vtxs.r  time_vis.r  time_vis_compare.r
eval/plots/scripts/: alpha.R  alpha_runtime.R  config.R  facebook.R  facebook_runtime.R  gamma.R  gamma_runtime.R  hops.R  hops_runtime.R  lambda.R  lambda_runtime.R  overview.R  overview_runtime.R  part_size.R  part_size_runtime.R
lib/rapidjson/: REMOVED_IN_PUBLIC_REPO.txt
